# ProjetObjetAvance2026

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/data/: Difficulty.hpp  Experience.cpp  Experience.hpp  GameConfig.hpp  QuestionGenerator.cpp  QuestionGenerator.hpp  Score.cpp  Score.hpp  Skin.hpp  SkinManager.cpp  SkinManager.hpp
src/gui/: DifficultySelector.cpp  DifficultySelector.hpp  ExperienceBar.cpp  ExperienceBar.hpp  GamePage.cpp  GamePage.hpp  GameSetupPage.cpp  GameSetupPage.hpp  HomePage.cpp  HomePage.hpp  Interrogation.cpp  MainWindow.cpp  MainWindow.hpp  Mascot.cpp  Mascot.hpp  MascotManager.cpp  MascotManager.hpp  QuestionTimer.cpp  QuestionTimer.hpp  ScoreDisplay.cpp  ScoreDisplay.hpp  SettingsDialog.cpp  SettingsDialog.hpp  ShopDialog.cpp  ShopDialog.hpp  SkinCreatorDialog.cpp  SkinCreatorDialog.hpp  SpeechBubble.cpp  SpeechBubble.hpp  ToggleSwitch.cpp  ToggleSwitch.hpp
src/resources/: resource.qrc
